@@ -16,32 +16,27 @@ public class Anagrams {
 
     private final List<String> rawDataFromFile;
 
-    public Anagrams(String path) {
-        List<String> input = null;
-        try {
-            input = Files.readAllLines(Paths.get(path));
-        } catch (IOException ex) {
-            ex.printStackTrace();
-        }
-        rawDataFromFile = input.stream()
-                .map(n-> n.split(" "))
-                .flatMap(Arrays::stream)
-                .collect(Collectors.toCollection(ArrayList::new));
+    public Anagrams(String path) throws IOException{
+        List<String> input = Files.readAllLines(Paths.get(path));
+            rawDataFromFile = input.stream()
+                    .map(n-> n.split(" "))
+                    .flatMap(Arrays::stream)
+                    .collect(Collectors.toCollection(ArrayList::new));
     }
 
     public List<List<String>> getSortedByAnQty() {
         Set<Set<String>> result = new LinkedHashSet<>();
-        for (String s : rawDataFromFile){
-            final String temp = Anagrams.convertToSortedParameter(s); //making compiler happy (:
-            result.add(rawDataFromFile.stream().filter(n-> Anagrams.convertToSortedParameter(n).equals(temp)).collect(Collectors.toCollection(LinkedHashSet::new)));
+        for (String s : rawDataFromFile) {
+            String temp = Anagrams.convertToSortedParameter(s);
+            result.add(rawDataFromFile.stream().filter(n -> Anagrams.convertToSortedParameter(n).equals(temp)).collect(Collectors.toCollection(LinkedHashSet::new)));
         }
         List<List<String>> finalresult = new ArrayList<>();
-        for(Set<String> s : result){
-            finalresult.add(new ArrayList<>(s));
-        }
-        finalresult.sort(Comparator.comparingInt(List::size));
-        Collections.reverse(finalresult);
-        return finalresult; }
+        for (Set<String> s : result) {
+            finalresult.add(new ArrayList<>(s)); }
+        return finalresult.stream().sorted(Comparator.comparingInt(List::size)).collect(Collectors.collectingAndThen(Collectors.toCollection(ArrayList::new), list -> {
+            Collections.reverse(list);
+            return list; }));
+    }
 
     private static String convertToSortedParameter(String input){
         String [] entry = input.split("");
@@ -53,6 +48,6 @@ public class Anagrams {
                 .filter(n -> n.length() == word.length())
                 .filter(n-> !n.equals(word))
                 .filter(n -> Anagrams.convertToSortedParameter(word).equals(Anagrams.convertToSortedParameter(n)))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
